SERVER-20700 Sort split keys returned by splitVector